--- a/A2POOCorb6/A2POOCorb6.vcxproj
+++ b/A2POOCorb6/A2POOCorb6.vcxproj
@@ -129,12 +129,14 @@
     <ClCompile Include="COULEUR.cpp" />
     <ClCompile Include="FRM_Principal.cpp" />
     <ClCompile Include="Functions.cpp" />
+    <ClCompile Include="FUNCTIONSTATS.cpp" />
     <ClCompile Include="gestion.cpp" />
     <ClCompile Include="MODE_REGLEMENT.cpp" />
     <ClCompile Include="NATURE.cpp" />
     <ClCompile Include="PAIEMENT.cpp" />
     <ClCompile Include="PERSONNEL.cpp" />
     <ClCompile Include="PRODUITS.cpp" />
+    <ClCompile Include="STATISTIQUES.cpp" />
     <ClCompile Include="TARIF.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -147,17 +149,24 @@
       <FileType>CppForm</FileType>
     </ClInclude>
     <ClInclude Include="Functions.h" />
+    <ClInclude Include="FUNCTIONSTATS.h" />
     <ClInclude Include="gestion.h" />
     <ClInclude Include="MODE_REGLEMENT.h" />
     <ClInclude Include="NATURE.h" />
     <ClInclude Include="PAIEMENT.h" />
     <ClInclude Include="PERSONNEL.h" />
     <ClInclude Include="PRODUITS.h" />
+    <ClInclude Include="STATISTIQUES.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
     <ClInclude Include="TARIF.h" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="FRM_Principal.resx">
       <DependentUpon>FRM_Principal.h</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="STATISTIQUES.resx">
+      <DependentUpon>STATISTIQUES.h</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
